# aiocoap

./: .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .woodpecker.yml  CITATION.cff  LICENSE  MANIFEST.in  NEWS  NEWS.rst  README.md  README.rst  aiocoap-client  aiocoap-fileserver  aiocoap-keygen  aiocoap-proxy  aiocoap-rd  clientGET-observe.py  clientGET-oscoap.py  clientGET.py  clientPUT.py  client_coap_server_GET.py  coap-client  coap-forward-proxy  coap-proxy  edhocclient.py  edhocserver-private-marco.credentials  edhocserver-private.credentials  edhocserver.credentials  edhocserver.py  pyproject.toml  requirements.txt  server-oscoap.py  server.py  server_bi_directional_coap.py  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: new_issue.md
.github/workflows/: test-on-windows.yml
.reuse/: dep5
.woodpecker/: all.yaml  badges.sh  build-pages.sh
LICENSES/: BSD-3-Clause.txt
aiocoap/: __init__.py  blockwise.py  config.py  credentials.cddl  credentials.py  defaults.py  dump.py  edhoc.py  error.py  interfaces.py  message.py  messagemanager.py  meta.py  options.py  optiontypes.py  oscoap.py  oscore.py  oscore_sitewrapper.py  pipe.py  plumbingrequest.py  protocol.py  proxy.py  resource.py  tokenmanager.py  transport_params.py
aiocoap/cli/: __init__.py  client.py  common.py  defaults.py  fileserver.py  keygen.py  proxy.py  rd.py  securitypolicy.cddl
aiocoap/numbers/: __init__.py  codes.py  constants.py  contentformat.py  eaditem.py  optionnumbers.py  types.py  uri_path_abbrev.py
aiocoap/proxy/: __init__.py  client.py  server.py
aiocoap/resourcedirectory/: __init__.py
aiocoap/resourcedirectory/client/: __init__.py  register.py
aiocoap/test/: test_coap.py
aiocoap/transports/: __init__.py  generic_udp.py  oscore.py  rfc8323common.py  simple4.py  simple6.py  simple6server.py  simplesocketserver.py  slipmux.py  tcp.py  tinydtls.py  tinydtls_server.py  tls.py  udp6.py  ws.py
aiocoap/util/: __init__.py  asyncio.py  cli.py  contenttype.py  crypto.py  cryptography_additions.py  dataclass_data.py  linkformat.py  linkformat_pygments.py  prettyprint.py  pyodide_websockets.py  queuewithend.py  secrets.py  socknumbers.py  uri.py
aiocoap/util/asyncio/: __init__.py  coro_or_contextmanager.py  getaddrinfo_addrconfig.py  getaddrinfo_v4mapped.py  peekqueue.py  pre35.py  recvmsg.py  timeoutdict.py
aiocoap/util/pyodide_websockets/: __init__.py
aiocoap/util/pyodide_websockets/asyncio/: __init__.py  client.py  connection.py
contrib/: REUSE.toml  aiocoap-fileserver  aiocoap-kivy-widget  aiocoap-proxy.ipynb  aiocoap-server.ipynb  aiocoap-widgets  aiocoap.ipynb  edhoc-demo-server.ipynb  edhoc-keypairgen.py  multicast-platform-evaluation  rd-relay
contrib/android/: .gitignore  README.rst  build-with-buildozer.py  prepare-launcher-code.py
contrib/android/p4a-recipes/cbor-diag/: __init__.py
contrib/cacheable-demo/: README.rst  client.py  server.py
contrib/deterministic-demo/: README.rst  client.py  server.py
contrib/html-viewer/: README.rst  index.html  viewer.py
contrib/oscoap-plugtest/: plugtest-client  plugtest-server  plugtest_common.py
contrib/oscoap-plugtest/common-context/: settings.json
contrib/oscore-plugtest/: .gitignore  plugtest-client  plugtest-server  plugtest_common.py
contrib/oscore-plugtest/common-context/: secret.json  settings.json
contrib/rats/: rats-adder.py  rats-rot13.py  rats-server
contrib/rd-plugtest/: registrant.py
contrib/widgets_common/: __init__.py  gobject_resource.py  kivy_resource.py  resource.py  util.py
doc/: LICENSE.rst  README.doc  aiocoap.cli.client.rst  aiocoap.cli.proxy.rst  aiocoap.cli.rst  aiocoap.dump.rst  aiocoap.error.rst  aiocoap.interfaces.rst  aiocoap.message.rst  aiocoap.numbers.codes.rst  aiocoap.numbers.constants.rst  aiocoap.numbers.optionnumbers.rst  aiocoap.numbers.rst  aiocoap.numbers.types.rst  aiocoap.options.rst  aiocoap.optiontypes.rst  aiocoap.protocol.rst  aiocoap.proxy.client.rst  aiocoap.proxy.rst  aiocoap.proxy.server.rst  aiocoap.resource.rst  aiocoap.rst  aiocoap.transports.rst  aiocoap.transports.udp6.rst  aiocoap.util.asyncio.rst  aiocoap.util.cli.rst  aiocoap.util.queuewithend.rst  aiocoap.util.rst  aiocoap.util.socknumbers.rst  aiocoap_index.py  api.rst  conf.py  design.rst  examples.rst  faq.rst  guidedtour.rst  index.rst  installation.rst  iot.coap.rst  iot.error.rst  (+20 more)
examples/: aiocoap-fileserver  clientGET.py  server-shelly.py  server.py
examples/kivy_browser/: browser.bat  coapbrowser.kv  main.py
examples/kivy_browser/data/: aneska.atlas
examples/kivy_browser/widgets/: browsingcard.py  colorboxlayout.py  colorlabel.py
examples/kivy_server/: main.py
iot/: __init__.py  coap.py  error.py  message.py  options.py  optiontypes.py  resource.py  util.py
iot/numbers/: __init__.py  codes.py  constants.py  optionnumbers.py  types.py
iot/test/: test_coap.py
iot/util/: __init__.py  queuewithend.py
src/aiocoap/: credentials.cddl  defaults.py  edhoc.py  message.py  meta.py  oscore_sitewrapper.py  protocol.py
src/aiocoap/cli/: client.py  fileserver.py
src/aiocoap/numbers/: codes.py  optionnumbers.py  types.py
src/aiocoap/transports/: tinydtls.py  ws.py
src/aiocoap/util/: __init__.py  socknumbers.py
tests/: REUSE.toml  __init__.py  client.py  common.py  doctest.py  encoding.py  fixtures.py  observe.py  proxy.py  reverseproxy.py  server.py  test_blockwise.py  test_client.py  test_commandline.py  test_credentials.py  test_crypto.py  test_dataclassdata.py  test_doctest.py  test_dtls.py  test_edhoc.py  test_encoding.py  test_fileserver.py  test_group_oscore.py  test_multitransport_rolereversal.py  test_noncoap_client.py  test_noncoap_tcp_client.py  test_observe.py  test_oscoap_plugtest.py  test_oscore.py  test_oscore_plugtest.py  test_protocol.py  test_proxy.py  test_rd_examples.py  test_reverseproxy.py  test_server.py  test_tests.py  test_timeoutdict.py  test_tls.py  test_uri_handling.py  test_uri_path_abbrev.py  (+1 more)
tests/test_credentials_oscore_context/: sequence.json  settings.json
tests/test_dataclassdata_data/: outer.edn  outer.json  outer.toml  outer.yaml
(+11 files in other folders)
